syntax = "proto3";

package protobuf;

option go_package = "github.com/joesjo/grpc-store/inventory/protobuf";

service InventoryService {
  rpc GetInventory(Empty) returns (stream InventoryItem) {}
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  rpc FindItems(FindItemsRequest) returns (stream InventoryItem) {}
  rpc InsertItem(InsertItemRequest) returns (InsertItemResponse) {}
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
  rpc IncrementItemQuantity(IncrementItemQuantityRequest) returns (IncrementItemQuantityResponse) {}
}

message Empty {}

message InventoryItem {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  InventoryItem item = 1;
}

message FindItemsRequest {
  string name = 1;
}

message InsertItemRequest {
  InventoryItem item = 1;
}

message InsertItemResponse {
  string itemId = 1;
}

message UpdateItemRequest {
  InventoryItem item = 1;
}

message UpdateItemResponse {
  int64 count = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  int64 count = 1;
}

message IncrementItemQuantityRequest {
  string id = 1;
  int32 amount = 2;
}

message IncrementItemQuantityResponse {
  int64 count = 1;
}
